<resources>
    <string name="app_name">Luca Salmi\'s Portfolio</string>
    <string name="placeholder_text">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="calc_title">Calculator App</string>
    <string name="restaurant_title">Restaurant Menu</string>
    <string name="bmi_title">BMI Calculator</string>
    <string name="notepad_title">My Notepad</string>
    <string name="calc_short_desc">A simple calculator created as\n a group project</string>
    <string name="restaurant_short_desc">An interactive menu for a restaurant</string>
    <string name="bmi_short_desc">An app to calculate the users BMI</string>
    <string name="notepad_short_desc">A notepad app with\na shopping list function</string>
    <string name="calc_full_desc">A simple calculator app, created as a group project.\n
        The user can perform all the basic mathematical operations and calculate the area of a circle, the volume of a cylinder
        or the pythagorean theorem with the mathematical formulas clearly shown.\n
    The result is shown in a specific field and the user can correct or clear all the fields.\n The link to the GitHub repository is in the top left corner of the page.</string>
    <string name="restaurant_full_desc">An interactive menu for a fictional restaurant, the main page leads to the different types of courses.\n
    A navigation arrow permits movement between all three categories and a info button describes the meaning of all possible allergens.\n
    At the bottom the user can click on the telephone number or the e-mail and activate the appropriate app on the device to call or mail the restaurant.
        \n The link to the GitHub repository is in the top left corner of the page. </string>
    <string name="bmi_full_desc">A simple app to calculate the user\'s BMI (Body Mass Index). It prompts the input of two values, height and weight, and then it performs a simple mathematical operation.\n
        The height value can be written in cm, m or as a whole number without invalidating the calculation.\n The link to the GitHub repository is in the top left corner of the page.</string>
    <string name="notepad_full_desc">An app to take simple notes and create shopping lists, built following the MVC architecture.\n
    The notes are saved as text files in the device memory and can be modified and erased. The app checks if two note names repeat and corrects in case.\n
    The shopping list function allows the user to add products, remove them and it can be re-opened and modified or erased later.\n The link to the GitHub repository is in the top left corner of the page. </string>
    <string name="placeholder_title">Title</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_about">About me</string>
    <string name="contacts_title">Contacts</string>
    <string name="e_mail">luca.salmi90@gmail.com</string>
    <string name="telephone">tel: 0765828872</string>
    <string name="linkedIn">LinkedIn Page</string>
    <string name="mail_sent_to">mailto:luca.salmi90@gmail.com</string>
    <string name="calc_github_link">https://github.com/LucaSalmi/Calculator-Grupp-4/</string>
    <string name="rest_github_link">https://github.com/LucaSalmi/RestaurangsMeny</string>
    <string name="bmi_github_link">https://github.com/LucaSalmi/BMI-Calculator</string>
    <string name="notepad_github_link">https://github.com/LucaSalmi/My_Notepad</string>
    <string name="main_github_link">https://github.com/LucaSalmi</string>
    <string name="kotlin_calc_title">Kotlin Graphic Calculator</string>
    <string name="kotlin_calc_short_desc">A graphic calculator built in Kotlin</string>
    <string name="kotlin_calc_github_link">https://github.com/LucaSalmi/kotlin_calculator</string>
    <string name="kotlin_calc_full_desc">Another calculator app, made entirely in Kotlin. This app shows the operation as a string in the upper part and can perform multiple operations at the same time, it also records the previous operations in a RecyclerView at the bottom and by clicking them the result of that operation is restored and can be used in a new operation  </string>
    <string name="about_me_text">Originally from Italy, I moved to Sweden in 2016.\n While always being interested in technology and programming, I didn\'t pursue a career in IT until 2021 when I started a course in App Development at KYH in Stockholm.\n There I was able to expand on my self-taught knowledge in programming ( C#, Java, HTML, Javascript and the Unity Game Engine) by learning Kotlin, Swift, Android Studio, XCode, Git, Github, API and Databases, Native Development, Bug-fixing, responsive web-design, Architectural models (MVC, MVVA, MVP) and Agile based work-models.\n Beside everything listed before, my two years program gave me the opportunity to apply all of the above in a practical way through personal and group projects, some of those presented in this app.Other then technical knowledge I have a very curios mind, good problem solving skills and I try to be as helpful as much as possible to everyone around me. Even if I prefer to do most of my work alone.\n Because of my previous work experiences I have developed great social skills and I\'m able to speak and write fluently in three languages (Italian, English and Swedish).</string>
</resources>